Fix parallax on mobile

--- a/public/themes/vanti/assets/css/website.css
+++ b/public/themes/vanti/assets/css/website.css
@@ -7918,7 +7918,7 @@ form .label-required:after {
 .parallax {
   color: #fff;
   margin: 20px 0;
-  padding: 100px 0;
+  padding: 80px 0;
   position: relative;
   text-align: center;
   margin-bottom: 40px;
